Swagger yaml updated for questionnaires endpoints
